Basic Responsive Layout

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fix + Flex</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -15,14 +15,14 @@
       <a class="brand" href="#">WD290</a>
 
       <!-- Responsive nav toggle (no JS) -->
-      <input class="nav-toggle" type="checkbox" id="nav-toggle" />
+      <input class="nav-toggle" type="checkbox" id="nav-toggle">
       <label class="nav-toggle-label" for="nav-toggle">
         Menu
       </label>
 
       <nav class="site-nav" aria-label="Primary">
         <ul class="nav-list">
-          <li><a href="#work">Work</li>
+          <li><a href="#work">Work</a></li>
           <li><a href="#resources">Resources</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -34,7 +34,7 @@
     <section class="hero" aria-labelledby="hero-title">
       <div class="container hero-inner">
         <div class="hero-copy">
-          <h1 id="hero-title">Build it clean. Make it flex.</h1>
+          <h1 id="hero-title">Build it clean. <br>Make it flex.</h1>
           <p class="lead">
             This page is semantic, but it has problems. Fix the HTML, then style it with CSS and Flexbox.
           </p>
@@ -55,9 +55,7 @@
 
     <section id="work" class="section">
       <div class="container">
-        <p>
-            <h2>Today’s focus: structure, layout, polish</h2>
-        </p>
+        <h2>Today’s focus: structure, layout, polish</h2>
         <p class="muted">Make these responsive using Flexbox. On small screens they stack. On larger screens they form columns.</p>
 
         <div class="card-row">
@@ -104,7 +102,7 @@
     </section>
 
     <section class="section section-alt" id="resources">
-      <div class="container content-split">
+      <div class="content-split container ">
         <article class="content">
           <h2>Content Area</h2>
 
@@ -117,10 +115,7 @@
           />
 
           <p>
-            On mobile: everything stacks. On desktop: this becomes a two-column layout using Flexbox.
-          </p>
-          <p>
-            Add comfortable line-height, max-width, and spacing. Don’t cram the text.
+            On mobile: everything stacks. On desktop: this becomes a two-column layout using Flexbox. Add comfortable line-height, max-width, and spacing. Don’t cram the text.
           </p>
         </article>
 
